--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.7.21"
+    ext.hilt_version = "2.46"
     ext.android_gradle_version = "7.2.2"
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 plugins {
@@ -9,6 +14,8 @@ plugins {
     id 'com.android.application' version "$android_gradle_version" apply false
     id 'com.android.library' version "$android_gradle_version" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
 }
 
 task clean(type: Delete) {
